Replace Graph with MutableGraph